--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon index.js",
     "lint": "eslint ."
   },
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^8.14.0",
+    "jest": "^28.1.0",
     "nodemon": "^2.0.16"
   }
 }
