--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Stephen Wayar",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
